# smartapply

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
app/: main.py  models.py
app/services/: analyzer.py  llm.py
app/utils/: config.py  exceptions.py  prompts.py
tests/: test_analyzer.py  test_models.py
